# numpy2cpp

./: .gitignore  CMakeLists.txt  README.md
python/: mod.py
src/: test.cpp
